--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,4 +1,9 @@
 <h3> <%= @profile.full_name %></h3>
 <p>
+  <div class="btn-group btn-group-sm btn-group-justified">
+    <%= link_to "Edit #{@profile.first_name}'s Profile", edit_profile_path(@profile), class: "btn btn-info" %>
+  </div>
+</p>
+<p>
   <%= @profile.bio %>
 </p>
