--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,16 +1,19 @@
 <h3> <%= @profile.full_name %></h3>
 <p>
-  <div class="btn-group btn-group-sm btn-group-justified">
-    <%= link_to "Edit #{@profile.first_name}'s Profile",
-        edit_profile_path(@profile),
-        class: "btn btn-info" %>
-    <%= link_to "Delete Profile",
-        profile_path(@profile),
-        class: "btn btn-danger",
-        data: { confirm: "Are you sure?" },
-        method: :delete %>
-  </div>
-</p>
-<p>
   <%= @profile.bio %>
 </p>
+
+
+<% content_for :nav do %>
+  <%= link_to "Edit #{@profile.first_name}'s Profile",
+      edit_profile_path(@profile),
+      class: "list-group-item" %>
+  <%= link_to "Add a Project Category",
+      new_category_path(profile_id: @profile.id),
+      class: "list-group-item" %>
+  <%= link_to "Delete Profile",
+      profile_path(@profile),
+      class: "list-group-item",
+      data: { confirm: "Are you sure?" },
+      method: :delete %>
+<% end %>
