--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -3,6 +3,6 @@
 <%= bootstrap_form_for @category do |f| %>
   <%= f.text_field :language %>
   <%= f.text_field :description %>
-  <%= hidden_field(:profile, :id) %>
+  <%= hidden_field :profile, :id, name: "category[profile_ids][]" %>
   <%= f.submit class: "btn btn-success btn-block" %>
 <% end %>
