--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,7 @@
 <p>
   <div class="btn-group btn-group-sm btn-group-justified">
     <%= link_to "Edit #{@project.name}",
-        edit_project_path(@project),
+        edit_project_path(@project, profile_id: @profile.id),
         class: "btn btn-info" %>
     <%= link_to "Delete Project",
         project_path(@project),
