--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,15 @@
 <h3> <%= @category.language %></h3>
 <p>
   <div class="btn-group btn-group-sm btn-group-justified">
-    <%= link_to "Edit #{@category.language}",
-        edit_category_path(@category, profile_id: @profile.id),
-        class: "btn btn-info" %>
+    <% if @profile %>
+      <%= link_to "Edit #{@category.language}",
+          edit_category_path(@category, profile_id: @profile.id),
+          class: "btn btn-info" %>
+    <% else %>
+      <%= link_to "Edit #{@category.language}",
+          edit_category_path(@category),
+          class: "btn btn-info" %>
+    <% end %>
     <%= link_to "Delete Category",
         category_path(@category),
         class: "btn btn-danger",
