--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,7 +1,6 @@
 <h3> <%= @profile.full_name %></h3>
-<p>
-  <%= @profile.bio %>
-</p>
+<hr>
+<p><span class="lead">Bio: </span><%= @profile.bio %></p>
 
 <div class="col-md-6">
   <p class="lead">Categories</p>
