--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<button class="btn btn-info" id="expand-nav">
+  <span class="glyphicon glyphicon-th-list"></span>
+</button>
   <div class="col-md-2 clearfix">
-    <button class="btn btn-info btn-block" name="expand-nav">
+    <button class="btn btn-info btn-block" id="contract-nav">
       <span class="glyphicon glyphicon-th-list"></span>
     </button>
-    <div class="list-group">
+    <div class="list-group" id="profile-nav">
       <% if @profile %>
         <% if @profile.id %>
           <%= link_to "View Profile", profile_path(@profile), class: "list-group-item" %>
