--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<button class="btn btn-info" id="expand-nav">
-  <span class="glyphicon glyphicon-th-list"></span>
-</button>
-  <div class="col-md-2 clearfix">
-    <button class="btn btn-info btn-block" id="contract-nav">
-      <span class="glyphicon glyphicon-th-list"></span>
-    </button>
-    <div class="list-group" id="profile-nav">
+  <div class="col-xs-4 col-sm-2 col-md-2 clearfix" id="profile-nav">
+    <!-- <button class="btn btn-info center-block" > -->
+    <div class="list-group">
+      <a class="list-group-item"><span class="glyphicon glyphicon-th-list center-block" id="nav-button"></span></a>
+    </div>
+    <!-- </button> -->
+    <div class="list-group nav-group">
       <% if @profile %>
         <% if @profile.id %>
           <%= link_to "View Profile", profile_path(@profile), class: "list-group-item" %>
@@ -25,7 +24,7 @@
   </div>
 
   <div class="container">
-    <div class="col-md-11">
+    <div class="col-xs-6 col-sm-10 col-md-10">
       <% if flash[:notice] %>
         <div class="flash alert alert-success alert-dismissible" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
