Add github url to profile. Not saving yet

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,8 +1,16 @@
 <%= render "layouts/errors", object: @profile %>
 
-<%= bootstrap_form_for @profile do |f| %>
-  <%= f.text_field :first_name %>
-  <%= f.text_field :last_name %>
-  <%= f.text_area :bio, rows: 7 %>
+<%= bootstrap_form_for @profile,
+    layout: :horizontal,
+    label_col: "col-sm-3",
+    control_col: "col-sm-9" do |f| %>
+  <div class="col-md-6">
+    <%= f.text_field :first_name %>
+    <%= f.text_field :last_name %>
+    <%= f.text_field :github_URL, placeholder: "https://github.com/<YOUR USERNAME>" %>
+  </div>
+  <div class="col-md-6">
+    <%= f.text_area :bio, layout: :default, rows: 9, hide_label: true %>
+  </div>
   <%= f.submit class: "btn btn-success btn-block" %>
 <% end %>
