--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,4 +1,8 @@
-<h3> <%= @profile.full_name %></h3>
+<h3> <%= @profile.full_name %>
+  <small class="muted">
+    <%= link_to "Github", "#{@profile.github_URL}" %>
+  </small>
+</h3>
 <hr>
 <p><span class="lead">Bio: </span><%= @profile.bio %></p>
 
