--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,4 @@
+
 <h3> <%= @project.name %>
   <small class="muted">
     <%= link_to "Github repo", "#{@project.repo_URL}" %> |
@@ -10,9 +11,9 @@
 <p><span class="lead">Project Description: </span><%= @project.description %></p>
 
 <% content_for :nav do %>
-  <% if @profile %>
+  <% if @user %>
     <%= link_to "Edit #{@project.name}",
-        edit_project_path(@project, profile_id: @profile.id),
+        edit_project_path(@project, user_id: @user.id),
         class: "list-group-item" %>
   <% else %>
     <%= link_to "Edit #{@project.name}",
