--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
-<%= render "layouts/errors", object: @profile %>
+<%= render "layouts/errors", object: @user %>
 
-<%= bootstrap_form_for @profile,
+<%= bootstrap_form_for @user,
     layout: :horizontal,
     label_col: "col-sm-3",
     control_col: "col-sm-9" do |f| %>
