--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,1 +1,8 @@
-<h1>Hi!</h1>
+<%= content_for :nav do %>
+  <%= render 'nav_content' %>
+  <% if user_signed_in? %>
+    <%= link_to "Add a Category",
+        new_category_path(user_id: current_user.id),
+        class: "list-group-item" %>
+  <% end %>
+<% end %>
