--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,20 @@
       <a class="list-group-item"><span class="glyphicon glyphicon-th-list center-block" id="nav-button"></span></a>
     </div>
     <div class="list-group nav-group">
-      <% if current_user %>
-        <%= link_to "View Profile", user_path(current_user), class: "list-group-item" %>
-      <% end %>
+
+      
       <%= yield :nav %>
     </div>
   </div>
-
   <div class="container">
+  <span class="pull-right">
+    <% if user_signed_in? %>
+      <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to "Sign Up", new_user_registration_path %> |
+      <%= link_to "Log In", new_user_session_path %>
+    <% end %>
+  </span>
     <div class="col-xs-6 col-sm-10 col-md-10">
 
       <% if flash[:notice] %>
