--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,3 +1,8 @@
 <h3>Please update your project description information</h3>
 
 <%= render "form" %>
+
+<%= content_for :nav do %>
+  <%= render "nav_content" %>
+  <%= link_to "View Projects", projects_path, class: "list-group-item" %>
+<% end %>
