--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,3 +1,8 @@
 <h3>Please enter your new project information</h3>
 
 <%= render "form" %>
+
+<%= content_for :nav do %>
+  <%= render "nav_content" %>
+  <%= link_to "View Projects", projects_path, class: "list-group-item" %>
+<% end %>
