--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,19 +14,19 @@
     </div>
     <div class="list-group nav-group">
 
-      
+
       <%= yield :nav %>
     </div>
   </div>
-  <div class="container">
-  <span class="pull-right">
-    <% if user_signed_in? %>
-      <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "Sign Up", new_user_registration_path %> |
-      <%= link_to "Log In", new_user_session_path %>
-    <% end %>
-  </span>
+  <div class="container clearfix">
+    <span class="pull-right">
+      <% if user_signed_in? %>
+        <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Sign Up", new_user_registration_path %> |
+        <%= link_to "Log In", new_user_session_path %>
+      <% end %>
+    </span>
     <div class="col-xs-6 col-sm-10 col-md-10">
 
       <% if flash[:notice] %>
