--- a/app/views/projects/_nav_content.html.erb
+++ b/app/views/projects/_nav_content.html.erb
@@ -1,3 +1,3 @@
 <%= link_to "View Profile", root_path, class: "list-group-item" %>
+<%= link_to "View Projects", projects_path, class: "list-group-item" %>
 <%= link_to "View Categories", categories_path, class: "list-group-item" %>
-  
