Fix styling on devise default forms

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,6 +19,9 @@
   </div>
   <% end %>
   <br>
-  <%= render "devise/shared/links" %>
 
 </div>
+
+<%= content_for :nav do %>
+  <%= render "devise/shared/links" %>
+<% end %>
