--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,31 +1,59 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2 class="text-center">Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-    <%= f.text_field :first_name %>
-    <%= f.text_field :last_name %>
-    <%= f.url_field :github_URL, placeholder: "https://github.com/<YOUR USERNAME>" %>
-    <%= f.email_field :email, autofocus: true %>
+<div class="row">
+  <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= devise_error_messages! %>
+    <div class="col-md-4">
+      <%= f.text_field :first_name %>
+    </div>
+    <div class="col-md-4">
+      <%= f.text_field :last_name %>
+    </div>
+    <div class="col-md-4">
+      <%= f.email_field :email, autofocus: true %>
+    </div>
+    <div class="col-md-12">
+      <%= f.url_field :github_URL, placeholder: "https://github.com/<YOUR USERNAME>" %>
+    </div>
+    <div class="col-md-12">
+      <%= f.text_area :bio, layout: :default, rows: 9, hide_label: true %>
+    </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
+    <div class="col-md-4">
+      <%= f.label :password, "leave blank if you don't want to change it", class: "sr-only" %>
+      <%= f.password_field :password, autocomplete: "off", placeholder: "leave blank if you don't want to change it" %>
+    </div>
+
+    <div class="col-md-4">
+      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    </div>
+
+    <div class="col-md-4">
+      <%= f.label :current_password, "we need your current password to confirm your changes", class: "sr-only" %>
+      <%= f.password_field :current_password, autocomplete: "off", placeholder: "we need your current password to confirm your changes" %>
+    </div>
+
+    <div class="actions col-md-12">
+      <%= f.submit "Update", class: "btn btn-success btn-block" %>
+    </div>
   <% end %>
-
-    <%= f.label :password, "leave blank if you don't want to change it", class: "sr-only" %>
-    <%= f.password_field :password, autocomplete: "off", placeholder: "leave blank if you don't want to change it" %>
-
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-
-    <%= f.label :current_password, "we need your current password to confirm your changes", class: "sr-only" %>
-    <%= f.password_field :current_password, autocomplete: "off", placeholder: "we need your current password to confirm your changes" %>
-
-  <div class="actions">
-    <%= f.submit "Update", class: "btn btn-default btn-block" %>
+</div>
+<hr>
+<div class="row">
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <div class="panel-heading"><h3>Cancel my account</h3></div>
+      <div class="panel-body">
+        <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger btn-block" %>
+      </div>
+    </div>
   </div>
+</div>
+
+<% content_for :nav do %>
+  <%= link_to "Back", :back,
+                      class: "list-group-item" %>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger btn-block" %></p>
-
-<%= link_to "Back", :back %>
