--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -25,12 +25,14 @@
 
 <% content_for :nav do %>
   <%= render "nav_content" %>
-  <%= link_to "Edit #{@category.language}",
-      edit_category_path(@category),
-      class: "list-group-item" %>
-  <%= link_to "Delete #{@category.language}",
-      category_path(@category),
-      class: "list-group-item",
-      data: { confirm: "Are you sure?" },
-      method: :delete %>
+  <% if user_signed_in? && current_user.admin? %>
+    <%= link_to "Edit #{@category.language}",
+        edit_category_path(@category),
+        class: "list-group-item" %>
+    <%= link_to "Delete #{@category.language}",
+        category_path(@category),
+        class: "list-group-item",
+        data: { confirm: "Are you sure?" },
+        method: :delete %>
+  <% end %>
 <% end %>
