--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class: "btn btn-default btn-block" %>
   </div>
   <% end %>
   <br>
