--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
 <% content_for :nav do %>
   <%= link_to "View Categories", categories_path, class: "list-group-item" %>
   <%= link_to "View Projects", projects_path, class: "list-group-item" %>
-  <% if user_signed_in? && current_user == @user %>
+  <% if user_signed_in? && current_user.admin? %>
     <%= link_to "Add a Category",
         new_category_path(user_id: @user.id),
         class: "list-group-item" %>
