--- a/app/views/devise/shared/_nav_content.html.erb
+++ b/app/views/devise/shared/_nav_content.html.erb
@@ -1,3 +1,4 @@
 <%= link_to "View Portfolio", root_path, class: "list-group-item" %>
 <%= link_to "View Categories", categories_path, class: "list-group-item" %>
 <%= link_to "View Projects", projects_path, class: "list-group-item" %>
+<%= link_to "View Posts", posts_path, class: "list-group-item" %>
