--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,33 +1,10 @@
-<%= form_for(@post) do |f| %>
-  <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-      <ul>
-      <% @post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :post_id %><br>
-    <%= f.number_field :post_id %>
-  </div>
-  <div class="field">
-    <%= f.label :comment %><br>
-    <%= f.check_box :comment %>
-  </div>
+<%= bootstrap_form_for @post do |f| %>
+  <%= render "layouts/errors", object: @post %>
+  <%= f.text_field :title %>
+  <%= f.text_area :content, rows: 20 %>
+  <%= f.hidden_field :user_id, value: current_user.id %>
+  <%= f.hidden_field :comment, value: false %>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-default btn-block" %>
   </div>
 <% end %>
