--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,49 +1,13 @@
-
-
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th>User</th>
-      <th>Post</th>
-      <th>Comment</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.content %></td>
-        <td><%= post.user_id %></td>
-        <td><%= post.post_id %></td>
-        <td><%= post.comment %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-
-
 <h3 class="text-center">Posts</h3>
 <div class="list-group">
-  <% if Posts.all.any? %>
-    <% Posts.all.each do |project| %>
-      <%= link_to project.name, project_path(project), class: "list-group-item text-center" %>
+  <% if Post.not_comments.any? %>
+    <% Post.not_comments.each do |post| %>
+      <%= link_to post.title, post_path(post), class: "list-group-item text-center" %>
     <% end %>
   <% end %>
 </div>
 
-<%= content_for "nav" do %>
+<%= content_for :nav do %>
   <%= render "nav_content" %>
   <% if user_signed_in? && current_user.admin? %>
     <%= link_to 'New Post', new_post_path, class: "list-group-item" %>
