--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Post</h1>
+<h1 class="text-center">New Post</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', posts_path %>
+<%= content_for :nav do %>
+  <%= render "nav_content" %>
+  <% if user_signed_in? && current_user.admin? %>
+    <%= link_to 'New Post', new_post_path, class: "list-group-item" %>
+  <% end %>
+<% end %>
